force-app/main/default/objects/Course_Fee__c.object
<CustomObject>
    <fields>
        <fullName>Admission_Category__c</fullName>
        <externalId>true</externalId>
        <label>Admission Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Total_Course_Fee__c</fullName>
        <label>Base Total Course Fee</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CP_Required__c</fullName>
        <label>CP Required</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Code_Version__c</fullName>
        <label>Course Code Version</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <externalId>true</externalId>
        <label>Course Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Deposit_Amount__c</fullName>
        <label>Course Deposit Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Fee_Identifier__c</fullName>
        <description>This field is used to match quote line information to the corresponding course fee</description>
        <formula>IF(Product__r.Product_Bundle__r.ProductCode = &quot;BUNUNI&quot;, 
Course_Code__c &amp; &quot;|&quot; &amp; 
TEXT(Course_Code_Version__c) &amp; &quot;|&quot; &amp;  
Fee_Category__c,
Course_Code__c &amp; &quot;|&quot; &amp; 
TEXT(Course_Code_Version__c) &amp; &quot;|&quot; &amp; 
Unit_Set_Code__c &amp; &quot;|&quot; &amp; 
Fee_Category__c)</formula>
        <label>Course Fee Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Fee_Review_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Course Fee Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Fees</relationshipLabel>
        <relationshipName>Course_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Diploma_Accelerated_Deposit__c</fullName>
        <formula>Course_Deposit_Amount__c / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diploma Accelerated Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Diploma_Accelerated_Total_Fee__c</fullName>
        <description>Tactical field system. Used in CPQ Price rule &apos;ISCA Accelerated diploma&apos; field used to pre-calculate a 50% discount for specific diploma as the base value before any RPL. Once source callista data is rectified this field is no longer necessary.</description>
        <formula>Year_One_Fee__c / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diploma Accelerated Total Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fee_Band_Code_Year__c</fullName>
        <label>Fee Band Code Year</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Category__c</fullName>
        <label>Fee Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Course Fees</relationshipLabel>
        <relationshipName>Course_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Bundle__c</fullName>
        <label>Product Bundle</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Options__c</fullName>
        <description>System field to auto generate product options for Diploma Course Fee</description>
        <label>Product Options</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Family__c</fullName>
        <label>Product Sub Family</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Course Fees</relationshipLabel>
        <relationshipName>Course_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_ID__c</fullName>
        <label>Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Course_Point_Annual_Load__c</fullName>
        <label>Standard Course Point Annual Load</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;PLANNED&quot;</defaultValue>
        <description>Course Fee Status</description>
        <inlineHelpText>Course Fee Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>PLANNED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_Message__c</fullName>
        <label>Sync Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Code__c</fullName>
        <externalId>true</externalId>
        <label>Unit Set Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Version__c</fullName>
        <label>Unit Set Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Set</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Fees (Unit Set)</relationshipLabel>
        <relationshipName>Course_Fees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X48_CP_Fee__c</fullName>
        <label>48 CP Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_One_Fee__c</fullName>
        <label>Year One Fee</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Course Fee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Fee_Band_Code_Year__c</columns>
        <columns>Course__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Course_Code_Version__c</columns>
        <columns>Unit_Set_Code__c</columns>
        <columns>CP_Required__c</columns>
        <columns>Course_Deposit_Amount__c</columns>
        <columns>Year_One_Fee__c</columns>
        <columns>Base_Total_Course_Fee__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_Code__c</field>
            <operation>equals</operation>
            <value>B2000</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>